[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvbox"
version = "0.0.1"
authors = [
  { name="Kelvin Kong", email="kelvin86@gmail.com" },
]
description = "A collection of commonly used functions for Computer Vision or any Neural Network Projects"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kelvinAI/cvbox"
"Bug Tracker" = "https://github.com/kelvinAI/cvbox"